--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - master
   schedule:
     - cron: '0 0 * * 1'
-
+  workflow_dispatch:
 jobs:
   build-android:
     name: Build Android APK
