--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,13 @@
 name: Build Komodo Wallet
 on:
-  pull_request:
-    types: [ opened, synchronize, reopened ]
   push:
     branches:
       - master
-  schedule:
-    - cron: '0 0 * * 1'
+  workflow_dispatch:
 jobs:
   build-android:
     name: Build Android APK
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       # Common setup
       # TODO: Remove workaround at some future point
@@ -38,8 +35,12 @@ jobs:
         uses: gradle/gradle-build-action@v2.4.2
       # mm2 lib download
       - run: mkdir -p android/app/src/main/cpp/libs/{armeabi-v7a,arm64-v8a}
-      - run: curl -l --header ${{ secrets.MM2_DOWNLOAD_HEADER }} "https://gitlab.com/api/v4/projects/11069706/jobs/artifacts/mm2.1-cross/raw/target/armv7-linux-androideabi/release/libmm2.a?job=android-armv7" --output "android/app/src/main/cpp/libs/armeabi-v7a/libmm2.a"
-      - run: curl -l --header ${{ secrets.MM2_DOWNLOAD_HEADER }} "https://gitlab.com/api/v4/projects/11069706/jobs/artifacts/mm2.1-cross/raw/target/aarch64-linux-android/release/libmm2.a?job=android-aarch64" --output "android/app/src/main/cpp/libs/arm64-v8a/libmm2.a"
+      - run: wget https://github.com/KomodoPlatform/komodo-defi-framework/releases/download/v2.4.0-beta/mm2-c800ea03f-android-armv7-CI.zip
+      - run: unzip mm2-c800ea03f-android-armv7-CI.zip
+      - run: mv libmm2.a android/app/src/main/cpp/libs/armeabi-v7a/
+      - run: wget https://github.com/KomodoPlatform/komodo-defi-framework/releases/download/v2.4.0-beta/mm2-c800ea03f-android-aarch64-CI.zip
+      - run: unzip mm2-c800ea03f-android-aarch64-CI.zip
+      - run: mv libmm2.a android/app/src/main/cpp/libs/arm64-v8a/
       # Save API binaries
       - name: Create API binaries directory
         run: mkdir -p build/api-binaries/
@@ -49,7 +50,7 @@ jobs:
           cp android/app/src/main/cpp/libs/arm64-v8a/libmm2.a build/api-binaries/libmm2-arm64-v8a.a
       # Upload API binaries
       - name: Upload API binaries
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: api-binaries
           path: build/api-binaries/
@@ -57,12 +58,12 @@ jobs:
       - name: Build release APK
         run: flutter build apk --release --obfuscate --split-debug-info=build/debug-info/
       - name: Save generated APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: android-apk
           path: build/app/outputs/flutter-apk/app-release.apk
       - name: Save debug info
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: android-debug-info
           path: build/debug-info/
