--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,26 +13,38 @@ jobs:
       # TODO: Remove workaround at some future point
       - name: Workaround git protocol error
         run: echo -e '[url "https://github.com/"]\n  insteadOf = "git://github.com/"' >> ~/.gitconfig
+
       - name: Checkout the code
         uses: actions/checkout@v3
+
       - name: Set up Java 11
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
+
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
+
       - name: Set up Flutter SDK
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '2.8.1'
           architecture: x64
           cache: true
+
       - name: Get dependencies
         run: flutter pub get --suppress-analytics
+
       # extra Gradle caching
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.4.2
+
+      # Download coins.json (from KomodoPlatform/coins)
+      - name: Download coins.json
+        run: |
+          curl -L https://raw.githubusercontent.com/KomodoPlatform/coins/master/coins -o coins.json
+
       # mm2 lib download
       - run: mkdir -p android/app/src/main/cpp/libs/{armeabi-v7a,arm64-v8a}
       - run: wget https://github.com/KomodoPlatform/komodo-defi-framework/releases/download/v2.4.0-beta/mm2-c800ea03f-android-armv7-CI.zip
@@ -41,6 +53,7 @@ jobs:
       - run: wget https://github.com/KomodoPlatform/komodo-defi-framework/releases/download/v2.4.0-beta/mm2-c800ea03f-android-aarch64-CI.zip
       - run: unzip mm2-c800ea03f-android-aarch64-CI.zip
       - run: mv libmm2.a android/app/src/main/cpp/libs/arm64-v8a/
+
       # Save API binaries
       - name: Create API binaries directory
         run: mkdir -p build/api-binaries/
@@ -48,20 +61,24 @@ jobs:
         run: |
           cp android/app/src/main/cpp/libs/armeabi-v7a/libmm2.a build/api-binaries/libmm2-armeabi-v7a.a
           cp android/app/src/main/cpp/libs/arm64-v8a/libmm2.a build/api-binaries/libmm2-arm64-v8a.a
+
       # Upload API binaries
       - name: Upload API binaries
         uses: actions/upload-artifact@v4
         with:
           name: api-binaries
           path: build/api-binaries/
+
       # APK build
       - name: Build release APK
         run: flutter build apk --release --obfuscate --split-debug-info=build/debug-info/
+
       - name: Save generated APK
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
           path: build/app/outputs/flutter-apk/app-release.apk
+
       - name: Save debug info
         uses: actions/upload-artifact@v4
         with:
